--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^5.9.10",
+    "amazon-cognito-identity-js": "^4.5.7",
+    "aws-amplify": "^3.3.14",
+    "aws-amplify-react-native": "^4.3.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
